Add build check GitHub Actions workflow
Introduces a CI workflow to run linting, formatting, build, and type checks on push and pull requests to main. Also removes unused icon props from Cards in the installation documentation for clarity.

--- a/content/docs/getting-started/installation.mdx
+++ b/content/docs/getting-started/installation.mdx
@@ -14,17 +14,17 @@ ElizaOS v1.2.0 requires Node.js v23.3.0 (exact version) and Bun v1.2.15 or highe
 ## System Requirements
 
 <Cards>
-  <Card title="Operating System" icon={<FileIcon />}>
+  <Card title="Operating System">
     - **macOS**: Works on both Intel and Apple Silicon Macs
     - **Linux**: Compatible with most distributions (Ubuntu 20.04+, CentOS 8+, Debian 11+)
     - **Windows**: Must be installed within WSL 2, not native Windows
   </Card>
-  <Card title="Hardware Requirements" icon={<CpuIcon />}>
+  <Card title="Hardware Requirements">
     - **Memory**: Minimum 4GB RAM (8GB+ recommended)
     - **Storage**: At least 2GB free disk space
     - **CPU**: Modern multi-core processor recommended
   </Card>
-  <Card title="Network Requirements" icon={<NetworkIcon />}>
+  <Card title="Network Requirements">
     - Internet connection for package installation
     - Access to npm/GitHub registries
     - Firewall permissions for API access (if using external LLMs)
