docs: standardize callout types in documentation
- Replaced `<Callout type="lightbulb">` with `<Callout type="info">` across multiple MDX files to ensure consistency in documentation.
- Updated sections in `CLAUDE.md`, `message-handlers-customization.mdx`, `message-handlers.mdx`, `client-types-implementations.mdx`, `prompt-templates-customization.mdx`, `python-integration.mdx`, `rest-api-complete-guide.mdx`, `vibe-codable-tutorial.mdx`, `pre-1.0.0-to-current.mdx`, and `common-issues.mdx` to reflect this change.
- Improved clarity and uniformity in the presentation of information throughout the documentation.

--- a/content/docs/core-concepts/communication/message-handlers-customization.mdx
+++ b/content/docs/core-concepts/communication/message-handlers-customization.mdx
@@ -471,7 +471,7 @@ export async function robustMessageHandler(
 
 ### Template Design
 
-<Callout type="lightbulb">
+<Callout type="info">
 Keep templates focused and use clear XML structure for reliable parsing. Test templates with various inputs to ensure consistent output.
 </Callout>
 
