--- a/content/docs/guides/client-types-implementations.mdx
+++ b/content/docs/guides/client-types-implementations.mdx
@@ -787,7 +787,7 @@ class ManagedClient {
 
 ## Platform-Agnostic Message Processing
 
-<Callout type="lightbulb">
+<Callout type="info">
 **Key Understanding**: Every client type converts platform-specific messages to the same internal `Memory` format before processing. The agent's behavior, decision-making, and response generation are identical regardless of the source platform.
 </Callout>
 
