--- a/content/docs/guides/prompt-templates-customization.mdx
+++ b/content/docs/guides/prompt-templates-customization.mdx
@@ -992,7 +992,7 @@ export async function processTemplateAsync(
 
 ### Template Design Guidelines
 
-<Callout type="lightbulb">
+<Callout type="info">
 **Template Design Principles:**
 1. **Clarity**: Use clear, specific instructions
 2. **Structure**: Maintain consistent XML structure
