--- a/content/docs/guides/python-integration.mdx
+++ b/content/docs/guides/python-integration.mdx
@@ -557,7 +557,7 @@ while True:
 
 ## Best Practices for Python Integration
 
-<Callout type="lightbulb">
+<Callout type="info">
   **Pro Tip**: Use Python for what it does best - data analysis, ML, scientific computing - while
   letting ElizaOS handle the agent orchestration and conversation flow.
 </Callout>
