--- a/content/docs/migration/pre-1.0.0-to-current.mdx
+++ b/content/docs/migration/pre-1.0.0-to-current.mdx
@@ -473,7 +473,7 @@ PORT=3001 npm start
 
 ## Best Practices for Migration
 
-<Callout type="lightbulb">
+<Callout type="info">
   **Tip**: Don't try to migrate everything at once. Start with core functionality and gradually add
   features.
 </Callout>
