--- a/content/docs/troubleshooting/common-issues.mdx
+++ b/content/docs/troubleshooting/common-issues.mdx
@@ -569,7 +569,7 @@ echo "Recovery complete!"
 
 ## Prevention Tips
 
-<Callout type="lightbulb">
+<Callout type="info">
   **Best Practice**: Set up automated monitoring and cleanup to prevent issues before they occur.
 </Callout>
 
