--- a/content/docs/learning-tracks/simple/vibe-codable-tutorial.mdx
+++ b/content/docs/learning-tracks/simple/vibe-codable-tutorial.mdx
@@ -257,7 +257,7 @@ Now your agent can interact with Discord and search the web!
 
 ## The "It Just Works" Philosophy
 
-<Callout type="lightbulb">
+<Callout type="info">
   **Core Principle**: If you can describe what you want, ElizaOS should be able to do it with
   minimal configuration.
 </Callout>
