feat: integrate Mermaid for diagram support in documentation
- Added Mermaid dependency to enhance documentation with diagram capabilities.
- Updated MDX components to include the Mermaid component for rendering diagrams.
- Replaced static Mermaid code blocks with the new `<Mermaid>` component in multiple MDX files to improve clarity and maintainability.
- Enhanced various documentation sections, including architecture, message flow, and client types, with dynamic diagrams for better visualization.

--- a/content/docs/core-concepts/architecture/package-organization.mdx
+++ b/content/docs/core-concepts/architecture/package-organization.mdx
@@ -65,8 +65,7 @@ The development layer supports development and tooling:
 
 The packages follow a clear dependency hierarchy:
 
-```mermaid
-graph TD
+<Mermaid chart="graph TD
     A[@elizaos/core] --> B[@elizaos/cli]
     A --> C[@elizaos/client]
     A --> D[@elizaos/server]
@@ -79,8 +78,7 @@ graph TD
     C --> J[@elizaos/docs]
 
     F --> K[Database Providers]
-    G --> L[Bootstrap Services]
-```
+    G --> L[Bootstrap Services]" />
 
 ### Core Dependencies
 
