--- a/content/docs/plugins/plugin-sql.mdx
+++ b/content/docs/plugins/plugin-sql.mdx
@@ -110,8 +110,7 @@ const {
 
 ### Table Relationships
 
-```mermaid
-graph TD
+<Mermaid chart="graph TD
     A[agents] --> M[memories]
     A --> E[entities]
     M --> EM[embeddings]
@@ -120,8 +119,7 @@ graph TD
     E --> P[participants]
     P --> RO[rooms]
     RO --> W[worlds]
-    A --> T[tasks]
-```
+    A --> T[tasks]" />
 
 ## Database Adapters
 
